# feup-asma-proj2

./: .gitignore  README.md  data.ipynb  data_collection.ipynb  pyproject.toml
ants/: __init__.py
ants/agents/: ant_agent.py  food_agent.py  home_agent.py  marker_agent.py
ants/behaviour/: ant_state_machine.py
ants/model/: ants_model.py
ants/movement/: ant_state_machine.py
ants/util/: position.py  state_machine.py
ants/view/: histogram_module.js  histogram_module.py  simple_continuous_canvas.js  simple_continuous_canvas.py
data/: distance.csv  experiment_1.csv  experiment_2.csv  experiment_3.csv  experiment_4.csv  experiment_5.csv  experiment_6.csv  experiment_7.csv  experiment_8.csv  time.csv
