[tool.poetry]
name = "ants"
version = "0.1.0"
description = ""
authors = ["Marcio Duarte <zmduartez@gmail.com>"]
readme = "README.md"
packages = [{include = "ants"}]

[tool.poetry.dependencies]
python = "^3.9"
Mesa = "^0.9.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "ants:main"